--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
         </section>
 
         <footer class="footer" id="footer">
-            <img src="Assets/img/logo+assinatura 2.svg" alt="img-footer">
+            <img src="Assets/img/logo-footer.svg">
 
-            <p class="texto-footer">
+            <p class=" texto-footer">
                 A comercialização das unidades autônomas<br> do empreendimento somente será realizada<br> após o
                 registro do Memorial de Incorporação junto<br> à matrícula do imóvel perante<br> o Cartório de Registro
                 de Imóveis competente.<br> Material
