--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     <a href="#form" style="text-decoration: none;  color: #ffffff;">CADASTRE-SE AGORA</a>
                 </button>
             </div>
-
+            <div class="img-header-apert">
+                <img src="./Assets/img/img-header.png">
+            </div>
         </section>
         <section class="img-header-desk">
 
