--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <p class="conteudo" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
                     data-aos-duration="1000">
-                    Avenida Ricardo Rocha Bonfim, 220 <br />
+                    Avenida Ricardo Rocha Bomfim, 220 <br />
                     Mansões Santo Antônio - Campinas
                     / SP
                 </p>
