--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     sua essência.
                 </p>
 
-                <p class="text_apart" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
+                <!-- <p class="text_apart" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
                     data-aos-duration="1000"> Dom - Le Monde <br /> Residencial:</p>
                 <p class="text_apart" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
-                    data-aos-duration="1000"> Para apreciar ao máximo o dom de aproveitar <br />a vida.</p>
+                    data-aos-duration="1000"> Para apreciar ao máximo o dom de aproveitar <br />a vida.</p> -->
 
 
                 <p class="local_icon" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
